# chaos-auditor

./: .gitignore  Blog.md  Dockerfile  PRD.md  README.md  blog.md  eval_harness.py  eval_random_agent_easy.json  eval_random_agent_medium.json  eval_scripted_easy.json  eval_scripted_hard.json  eval_scripted_medium.json  gradio_app.py  inference.py  openenv.yaml  play_demo.py  preflight.py  pyproject.toml  requirements.txt
chaos_auditor/: __init__.py  client.py  models.py
chaos_auditor/server/: app.py  environment.py  scenarios.py  simulation.py
server/: app.py
training/: chaos_auditor_grpo.ipynb  system_prompt.txt
